# EmotesFall

./: .env.example  .gitignore  README.md  angular.json  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.json  update_version.js  update_version.sh
.github/workflows/: main.yml
src/: index.html  styles.scss
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_core.rs  main.rs
src-tauri/src/app_core/: local_server.rs  net_utils.rs  ws_server.rs
src/app/: app.component.ts  app.module.ts
src/app/core/: core.module.ts
src/app/core/services/: events.service.ts  shared-state.service.ts  storage.service.ts  websocket.service.ts
src/app/main/: main.component.html  main.component.ts  main.module.ts  main.routing.ts
src/app/main/components/emotes-background/: emotes-background.component.html  emotes-background.component.scss  emotes-background.component.ts
src/app/main/components/overlays/: overlays.component.css  overlays.component.html  (+1 more)
src/app/main/services/: emotes-fall.service.ts
src/app/shared/: shared.module.ts
src/app/shared/guards/: tauri.guard.ts
src/app/shared/models/: toggler.ts
src/app/shared/services/: settings.service.ts
src/app/views/: views.module.ts  views.routing.ts
src/app/views/models/: emote-sprite.ts  emotes-app.ts
src/app/views/widget/: widget.component.html  widget.component.scss  widget.component.ts
src/assets/fonts/: presto.css
src/environments/: environment.prod.ts  environment.ts  envvars.ts
src/fonts/: betty-noir.scss  pp-pier.scss
src/i18n/: fr_FR.json
(+12 files in other folders)
