[package]
name = "emote-fall"
version = "0.0.0"
description = "A Tauri app with embedded server for external views"
authors = ["Vincent Chabrette"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = [ "dialog-save", "dialog-open", "fs-read-file", "clipboard-all", "fs-create-dir", "path-all", "fs-write-file", "fs-read-dir", "devtools"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
get_if_addrs = "0.5.3"
tiny_http = "0.12.0"
http = "0.2"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.20.0"
warp = "0.3"
futures = "0.3"
uuid = "1.4.1"
tokio-stream = "0.1.14"
chrono = "0.4.26"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
